# LituanicaX_IsaacSimChallenge

./: .gitignore  .gitmodules  README.md  install.sh  play.py  pyproject.toml
Training/: README.md  TrackPoints.csv  install.sh  play.py  train.py
Training/assets/: Track.usdc
Training/source/: setup.py
Training/source/tasks/cone_track/: env.py
Training/source/tasks/cone_track/agents/: __init__.py  ppo_cfg.py
assets/: Walls.usdc
source/tasks/: __init__.py
source/tasks/cone_track/: __init__.py  env.py
source/tasks/cone_track/agents/: ppo_cfg.py
